--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "manage-chats-chatgpt"]
 	path = manage-chats-chatgpt
 	url = https://github.com/luascfl/manage-chats-chatgpt
+[submodule "empty-google-tasks"]
+	path = empty-google-tasks
+	url = https://github.com/luascfl/empty-google-tasks
